--- a/sherwin_demo/package.json
+++ b/sherwin_demo/package.json
@@ -45,6 +45,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -62,5 +63,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-react": "^7.16.7",
+    "babel-jest": "^28.1.0",
+    "jest": "^28.1.0",
+    "react-test-renderer": "^18.1.0"
   }
 }
